--- a/azure-pipelines-2.yml
+++ b/azure-pipelines-2.yml
@@ -7,11 +7,20 @@ trigger:
 - master
 
 pool:
+- task: AzureWebApp@1
+  inputs:
+    azureSubscription: 'Azure Pass - Sponsorship(fd983f73-5e6b-467b-ae2f-299e747e74d0)'
+    appType: 'webApp'
+    appName: Demo-PN
+    package: '$(System.DefaultWorkingDirectory)/**/*.zip'
+    deploymentMethod: 'auto'
   vmImage: ubuntu-latest
 
 variables:
   buildConfiguration: 'Release'
 
 steps:
+-task: Dotnec
 - script: dotnet build --configuration $(buildConfiguration)
   displayName: 'dotnet build $(buildConfiguration)'
+  publish
