Update azure-pipelines-2.yml for Azure Pipelines

--- a/azure-pipelines-2.yml
+++ b/azure-pipelines-2.yml
@@ -6,3 +6,19 @@
 trigger:
 - master
 
+pool:
+ task: AzureWebApp@1
+  
+    azureSubscription: 'Azure Pass - Sponsorship(fd983f73-5e6b-467b-ae2f-299e747e74d0)'
+    appType: 'webApp'
+    appName: Demo-PN
+    package: '$(System.DefaultWorkingDirectory)/**/*.zip'
+    deploymentMethod: 'auto'
+  vmImage: ubuntu-latest
+
+variables:
+  buildConfiguration: 'Release'
+
+steps:
+- script: dotnet build --configuration $(buildConfiguration)
+  displayName: 'dotnet build $(buildConfiguration)'
